# shopping-assistant

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  STREAMLIT_README.md  build_index.py  pyproject.toml  run_app.py  streamlit_app.py
infra/: README.md
notebooks/: 2025-09-29 - EDA.ipynb  eda.ipynb
scripts/: devenv.sh
services/: README.md
shopping_assistant/: __init__.py  ingest_sqlite.py  preprocessor.py  qa.py  schema.sql  tools.py  ui.py
shopping_assistant/prompts/: system.txt
src/shopping_assistant/: __init__.py  app.py
src/shopping_assistant/indexing/: __init__.py  data_preprocessor.py  product_index.py  search_engine.py
ui/streamlit_app/: README.md
