[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopping-assistant"
version = "0.1.0"
description = "An AI-powered conversational shopping assistant"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Xenia Skotti", email = "xeniaskotti@gmail.com"}
]
keywords = ["ai", "shopping", "assistant", "llm", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain == 1.0.3",
    "langchain-ollama ~= 1.0",
    "numexpr ~= 2.4",
    "numpy >= 1.24",
    "ollama == 0.6.0",
    "pandas ~= 2.0",
    "pathlib2 >= 2.3",
    "pydantic ~= 2.11",
    "scikit-learn >= 1.3",
    "streamlit == 1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

notebooks = [
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "ipython"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shopping_assistant*"]

[tool.setuptools.package-dir]
"" = "."

# Black configuration
[tool.black]
line-length = 120
target-version = ['py312']

# Flake8 configuration
[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]

# mypy configuration
[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
